@@ -18,21 +18,15 @@ end_comment
 
 begin_import
 import|import
-name|java
+name|org
 operator|.
-name|io
+name|apache
 operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
+name|lucene
 operator|.
-name|util
+name|index
 operator|.
-name|Set
+name|IndexReader
 import|;
 end_import
 
@@ -89,6 +83,34 @@ operator|.
 name|index
 operator|.
 name|Term
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|BooleanClause
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|BooleanQuery
 import|;
 end_import
 
@@ -215,6 +237,26 @@ operator|.
 name|util
 operator|.
 name|ToStringUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
 import|;
 end_import
 
@@ -823,6 +865,137 @@ return|;
 block|}
 block|}
 return|;
+block|}
+annotation|@
+name|Override
+DECL|method|rewrite
+specifier|public
+name|Query
+name|rewrite
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// Crosses date line: we just rewrite into OR of two bboxes:
+if|if
+condition|(
+name|maxLon
+operator|<
+name|minLon
+condition|)
+block|{
+comment|// Disable coord here because a multi-valued doc could match both rects and get unfairly boosted:
+name|BooleanQuery
+name|q
+init|=
+operator|new
+name|BooleanQuery
+argument_list|(
+literal|true
+argument_list|)
+decl_stmt|;
+comment|// E.g.: maxLon = -179, minLon = 179
+name|BKDPointInBBoxQuery
+name|left
+init|=
+operator|new
+name|BKDPointInBBoxQuery
+argument_list|(
+name|field
+argument_list|,
+name|minLat
+argument_list|,
+name|maxLat
+argument_list|,
+name|BKDTreeWriter
+operator|.
+name|MIN_LON_INCL
+argument_list|,
+name|maxLon
+argument_list|)
+decl_stmt|;
+name|left
+operator|.
+name|setBoost
+argument_list|(
+name|getBoost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BooleanClause
+argument_list|(
+name|left
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|BKDPointInBBoxQuery
+name|right
+init|=
+operator|new
+name|BKDPointInBBoxQuery
+argument_list|(
+name|field
+argument_list|,
+name|minLat
+argument_list|,
+name|maxLat
+argument_list|,
+name|minLon
+argument_list|,
+name|BKDTreeWriter
+operator|.
+name|MAX_LON_INCL
+argument_list|)
+decl_stmt|;
+name|right
+operator|.
+name|setBoost
+argument_list|(
+name|getBoost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BooleanClause
+argument_list|(
+name|right
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+name|q
+return|;
+block|}
+else|else
+block|{
+return|return
+name|this
+return|;
+block|}
 block|}
 annotation|@
 name|Override
